--- a/WcaOnRails/app/views/delegate_reports/_delegate_report.html.erb
+++ b/WcaOnRails/app/views/delegate_reports/_delegate_report.html.erb
@@ -2,10 +2,14 @@
 
 <div class="delegate-report">
   <% if delegate_report.wrc_feedback_requested %>
-    <font color="red">
-      <strong>@WRC: Feedback requested on incidents: <%= delegate_report.wrc_incidents %></strong>
-    </font>
-    <br><br>
+    <p style="color: red; font-weight: bold">
+      @WRC: Feedback requested on incidents: <%= delegate_report.wrc_incidents %>
+    </p>
+  <% end %>
+  <% if delegate_report.wdc_feedback_requested %>
+    <p style="color: red; font-weight: bold">
+      @WDC: Feedback requested on incidents: <%= delegate_report.wdc_incidents %>
+    </p>
   <% end %>
 
   <div>
