--- a/WcaOnRails/app/views/delegate_reports/edit.html.erb
+++ b/WcaOnRails/app/views/delegate_reports/edit.html.erb
@@ -20,6 +20,8 @@
     <%= f.input :incidents, input_html: { class: "markdown-editor markdown-editor-image-upload" } %>
     <%= f.input :wrc_feedback_requested, as: :boolean %>
     <%= f.input :wrc_incidents %>
+    <%= f.input :wdc_feedback_requested, as: :boolean %>
+    <%= f.input :wdc_incidents %>
     <%= f.input :remarks, input_html: { class: "markdown-editor markdown-editor-image-upload" } %>
 
     <%= f.button :submit, class: "btn-primary" %>
